--- a/styles/style.css
+++ b/styles/style.css
@@ -78,7 +78,7 @@ main{
     margin-top: 120px;
     background: #FFF8F3;
     border-radius: 10px;
-    padding: 130px 50px;
+    padding: 131px 157px;
     text-align: center;
 }
 .section-title{
@@ -106,4 +106,39 @@ main{
 .info-description{
     color: #757575;
     font-size: 20px;
+}
+/* what i do section */
+.what-i-do-section{
+    margin: 130px 200px 0px ;
+    text-align: center;
+   
+}
+/* card style */
+.boxes{
+   margin-top: 130px;
+   display: flex;
+   gap: 24px;
+   margin-bottom: 130px;
+}
+.card{
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    
+}
+.card img{
+    margin-top: 30px;
+    margin-left: 30px;
+}
+.skill{
+    padding: 30px;
+}
+.card-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.card-description{
+    color: #757575;
 }
