--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@
 .primary-color{
     color:#FD6E0A;
 }
-.header{
+.head{
     background-color: 
     #FFF8F3;
     background-image: url(/images/header_bg.png),url(/images/developer.png);
@@ -34,8 +34,10 @@
 nav{
     display:flex ;
     justify-content: space-between;
-    margin:50px 200px ;
+    margin:0 200px 50px ;
+    padding-top: 20px;
 }
+
 .list-item{
     display: flex;
     list-style: none;
@@ -180,4 +182,43 @@ main{
 .resume-button{
     text-align:center;
     margin-top: 50px;
+    margin-bottom: 110px;
+}
+/* fotter style */
+footer {
+    margin: 0 auto;
+    display:flex;
+    gap: 117px;
+}
+.contact-description{
+    margin: 0 110px;
+}
+.contact-title{
+    margin-bottom: 20px;
+    color: #474747;
+
+}
+.contact-pera{
+    margin-bottom: 30px;
+    color: #757575;
+}
+.icon{
+    margin-right: 21px;
+}
+.forum-title{
+    color: #474747;
+    margin-bottom: 30px;
+
+}
+form .name-holder,.email-holder{
+    background: #FFFFFF;
+    border-radius: 5px;
+    padding: 18px 350px 18px 30px ;
+    margin-bottom: 24px;
+}
+form .message{
+    background: #FFFFFF;
+    padding:18px 365px 134px 30px ;
+    border-radius: 5px;
+    margin-bottom: 24px;
 }
