--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@
 .head{
     background-color: 
     #FFF8F3;
-    background-image: url(/images/header_bg.png),url(/images/developer.png);
+    background-image: url(../images/header_bg.png),url(../images/developer.png);
     background-repeat: no-repeat;
     background-position: bottom right,left;
 }
